@@ -1511,31 +1511,25 @@ condition|(
 literal|true
 condition|)
 block|{
-name|String
-name|parentId
-init|=
-literal|"hive-rowcontainer"
-operator|+
-name|Utilities
-operator|.
-name|randGen
-operator|.
-name|nextInt
-argument_list|()
-decl_stmt|;
 name|parentFile
 operator|=
-operator|new
 name|File
+operator|.
+name|createTempFile
 argument_list|(
-literal|"/tmp/"
-operator|+
-name|parentId
+literal|"hive-rowcontainer"
+argument_list|,
+literal|""
 argument_list|)
 expr_stmt|;
 name|boolean
 name|success
 init|=
+name|parentFile
+operator|.
+name|delete
+argument_list|()
+operator|&&
 name|parentFile
 operator|.
 name|mkdir
